# pedestrians-in-youtube

./: .dockerignore  .gitignore  .jscpd.json  Dockerfile  LICENSE  README.md  SECURITY.md  add_video.py  analysis.py  bbox_custom_tracker.yaml  cast_int.py  check.csv  check_lists.py  check_temp.py  common.py  config_utils.py  countries.csv  dataset_enrichment.py  default.config  default.secret  delete_v8_files.py  docker-compose.debug.yml  docker-compose.yml  download_vid.py  download_videos.py  exist_files.py  find_common.py  find_corrupt_files.py  find_duplicate_videos.py  fix_channel.py  frame.py  geometry.py  get_videos_download.py  height_data.csv  helper.py  helper_script.py  list_incomplete_mp4.py  logmod.py  main.py  make_population_int.py  (+48 more)
_outputs/: all_vehicle_vs_cross_time.html  car_vs_cross_time.html  cell_phone_vs_death.html  death_vs_crossing_event_wt_traffic_light.html  hesitation_vs_death.html  motorcycle_vs_cross_time.html  speed_of_crossing_vs_death.html  speed_of_crossing_vs_literacy.html  truck_vs_cross_time.html
figures/: Correlation_matrix_heatmap_Africa.html  Correlation_matrix_heatmap_Asia.html  Correlation_matrix_heatmap_Australia.html  Correlation_matrix_heatmap_Europe.html  Correlation_matrix_heatmap_North_America.html  Correlation_matrix_heatmap_Oceania.html  Correlation_matrix_heatmap_South_America.html  Correlation_matrix_heatmap_averaged.html  Correlation_matrix_heatmap_in_daylight.html  Correlation_matrix_heatmap_in_night.html  all_vehicle_vs_cross_time.html  analysis.py  bar_continent_time_of_day.eps  bar_vehicle_type_time_of_day.eps  bar_vehicle_type_vs_time_of_day.eps  bus_vs_cross_time.html  car_vs_cross_time.html  (+120 more)
(+152 files in other folders)
